- fix for WriteText
git-svn-id: svn://dev-svn.seasr.org/Components/Foundry/trunk@1818 dc7ab104-3778-4984-a5d9-166996b8e16d